# test-sidecar

./: package-lock.json  package.json  test-x86_64-pc-windows-msvc.spec  tsconfig.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
