[package]
name = "test-sidecar"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-minimize", "window-set-fullscreen", "http-all", "window-close", "fs-create-dir", "fs-remove-file", "window-maximize", "window-start-dragging", "window-set-size", "path-all", "shell-all", "window-set-focus", "dialog-all", "fs-read-file", "fs-read-dir", "fs-exists", "window-set-decorations", "os-all", "fs-write-file", "window-unminimize", "window-unmaximize", "app-all", "global-shortcut-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
